--- a/回归/一元线性回归/2.最小二乘估计OLSE.md
+++ b/回归/一元线性回归/2.最小二乘估计OLSE.md
@@ -8,7 +8,8 @@ $$\hat{y}=\hat{\beta_1}x+\hat{\beta_0}$$
 
 构造目标函数
 $$Q(\gamma_0,\gamma_1)=\Sigma_{i=1}^n(y_i-\gamma_0-\gamma_1x)^2$$
-Q是凸函数，$$\left\{
+Q是凸函数，
+$$\left\{
 \begin{aligned}
 \frac{\partial{Q}}{\partial{\gamma_0}} &= 0 \\
 \frac{\partial{Q}}{\partial{\gamma_1}} &= 0 
